syntax = "proto2";

package io.duna.cluster.internal.message;

message ClusterMessage {
  required MessageType messageType = 1;

  optional string source  = 2;
  required string target  = 3;
  optional string replyTo = 4;

  optional bytes  attachment     = 5;
  optional string attachmentType = 6;

  map<string, string> headers = 7;

  required TransmissionMode transmissionMode = 8;
  required SignalType signalType = 9;
}

enum MessageType {
  EVENT   = 0;
  SIGNAL  = 1;
  REQUEST = 2;
  ERROR   = 3;
}

enum TransmissionMode {
  UNICAST   = 0;
  MULTICAST = 1;
  BROADCAST = 2;
}

enum SignalType {
  NONE       = 0;
  COMPLETION = 1;
}
